--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <p>CEO & Co-Founder</p>
                 </div>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut porro ipsam quasi adipisci mollitia reprehenderit, dicta quidem laudantium repellat neque doloribus officiis earum aliquid ab dolorum numquam. Enim, iusto iste.</p>
+            <p id="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut porro ipsam quasi adipisci mollitia reprehenderit, dicta quidem laudantium repellat neque doloribus officiis earum aliquid ab dolorum numquam. Enim, iusto iste.</p>
         </div>
         <div class="client-image">
             <img src="./client.png" alt="">
