main-footer add

--- a/index.html
+++ b/index.html
@@ -254,6 +254,19 @@
             <img src="./client.png" alt="">
         </div>
        </section>
+       <section class="main-footer">
+        <div class="main-footer-img">
+            <img src="./head1.png" alt="">
+        </div>
+        <div class="main-footer-desc">
+            <h1>Subscribe To Our Newsletter</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta temporibus ullam aliquid voluptatibus, repellat nostrum quos ab exercitationem</p>
+            <div class="button-field">
+                <input type="email" id="email" placeholder="Type Your email.."><button>Subscribe</button>
+            </div>
+       
+        </div>
+       </section>
     </main>
 </body>
 </html>
