--- a/index.html
+++ b/index.html
@@ -249,6 +249,17 @@
                 </div>
             </div>
             <p id="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut porro ipsam quasi adipisci mollitia reprehenderit, dicta quidem laudantium repellat neque doloribus officiis earum aliquid ab dolorum numquam. Enim, iusto iste.</p>
+
+
+             <div class="client-arrow">
+                <div class="arrow1"> 
+                    <img src="./arrow1.png" alt="">
+                </div>
+                <div class="arrow2">
+                    <img src="./arrow2.png" alt="">
+                </div>
+             </div>
+           </div>
         </div>
         <div class="client-image">
             <img src="./client.png" alt="">
@@ -268,5 +279,44 @@
         </div>
        </section>
     </main>
+    <footer>
+        <div class="footer-card1">
+            <img src="./image1.png" alt="">
+            <p class="fot-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe veniam labore exer</p>
+            <a href=""><img src="./facebook.png" alt=""></a>
+            <a href=""><img src="./twitter.png" alt=""></a>
+            <a href=""><img src="./linkedin.png" alt=""></a>
+            <a href=""><img src="./instagram.png" alt=""></a>
+        </div>
+        <div class="footer-card2">
+            <h3 class="fot-head">Opening Restaurant</h3>
+            <p class="fot-para">Sat-Wed: 09:00am -10:00pm <br>
+               Thursday: 09:00am -11:00pm <br>
+               Friday: 09:00am -08:00pm
+            </p>
+        </div>
+        <div class="footer-card3">
+            <h3 class="fot-head">User Link</h3>
+            <p class="fot-para">About Us <br>
+               Contact Us <br>
+               Order Delivery <br>
+               Payment & tax <br>
+               Terms of Services 
+            </p>
+        </div>
+        <div class="footer-card4">
+            <h3 class="fot-head">Contact Us</h3>
+            <p class="fot-para">Mohammadpur, Dhaka <br>
+               +88 016 2499 4532 <br>
+               +88 016 2499 4532
+            </p>
+            <div class="input-email">
+                <input type="email" placeholder="enter email.">
+                <div class="input-img">
+                    <img src="./right-arrow.png" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
