--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <h1>The Fastest <br>
                              <span class="new-style">  Delivery</span>  <br>
                                 In <span class="new-style">Your City</span></h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Commodo, sed proin amet a vestibulum enim volutpat lacus. Volutpat arcu sit sed tortor etiam volutpat ipsum.</p>
+                            <p>Welcome to Foody, where fresh ingredients meet culinary creativity. Enjoy diverse flavors, crafted with passion for an unforgettable dining experience.</p>
                         </div>
                     </div>
                     <div class="header-button">
@@ -95,13 +95,15 @@
                 </div>
                 <div class="address">
                     <div class="location">
-                        <i class="fa-thin fa-location-dot"></i></i>
+                        <i class="fa-solid fa-location-dot"></i>
                     </div>
                     <h6>Mohammadpur, Dhaka</h6>
                     <p>Our Location</p>
                 </div>
                 <div class="address" id="address">
-                    <img src="./icon3.png" alt=""> 
+                    <div class="phone">
+                        <i class="fa-solid fa-phone"></i>
+                    </div>
                     <h6>+88 017 0000 0000</h6>
                     <p>Phone Number</p>
                 </div>  
@@ -228,23 +230,17 @@
         <div class="food-desc">
            <div class="food-image"><img src="./quality.png" alt=""></div>
            <h3>Qualityfull Food</h3>
-           <p>But I must explain to you how all this
-            mistaken idea of denouncing pleasur and
-            prasising pain was bron.</p>
+           <p>Experience the finest ingredients and exceptional flavors in every dish at Foody. Quality guaranteed.</p>
         </div>
         <div class="food-desc" id="food-desc">
            <div class="food-image"><img src="./healthy.png" alt=""></div>
            <h3>Healthy Food</h3>
-           <p>But I must explain to you how all this
-            mistaken idea of denouncing pleasur and
-            prasising pain was bron.</p>
+           <p>Nourish your body with our fresh, wholesome dishes. At Foody, health meets deliciousness in every bite.</p>
         </div>
         <div class="food-desc">
            <div class="food-image"><img src="./fast.png" alt=""></div>
            <h3>Fast Delivery</h3>
-           <p>But I must explain to you how all this
-            mistaken idea of denouncing pleasur and
-            prasising pain was bron.</p>
+           <p>Enjoy your favorite meals quickly! Foody guarantees fast, reliable delivery, bringing deliciousness straight to your door.</p>
         </div>
        </section>
        <div class="product-head">
@@ -260,7 +256,8 @@
                     <p>CEO & Co-Founder</p>
                 </div>
             </div>
-            <p id="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut porro ipsam quasi adipisci mollitia reprehenderit, dicta quidem laudantium repellat neque doloribus officiis earum aliquid ab dolorum numquam. Enim, iusto iste.</p>
+            <p id="para">"I was blown away by the quality and taste of the food. The delivery was super quick, and everything arrived hot and fresh. Foody has definitely earned a repeat customer!"
+            </p>
 
 
              <div class="client-arrow">
@@ -283,7 +280,7 @@
         </div>
         <div class="main-footer-desc">
             <h1>Subscribe To Our Newsletter</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta temporibus ullam aliquid voluptatibus, repellat nostrum quos ab exercitationem</p>
+            <p>Stay updated with the latest from Foody! Exclusive offers, new dishes, and culinary tips delivered straight to your inbox.</p>
             <div class="button-field">
                 <input type="email" id="email" placeholder="Type Your email.."><button>Subscribe</button>
             </div>
@@ -294,7 +291,7 @@
     <footer>
         <div class="footer-card1">
             <img src="./image1.png" alt="">
-            <p class="fot-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe veniam labore exer</p>
+            <p class="fot-para">Thank you for visiting Foody. Enjoy delicious meals, fast service, and fresh flavors every time!</p>
             <a href=""><img src="./facebook.png" alt=""></a>
             <a href=""><img src="./twitter.png" alt=""></a>
             <a href=""><img src="./linkedin.png" alt=""></a>
